Layouting and styling topic main view