@@ -1,13 +1,11 @@
-package com.example.application.data.service;
-
-import java.util.List;
-import java.util.stream.Collectors;
-
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
+package com.example.application.service.user;
 
 import com.example.application.data.entity.Role;
 import com.example.application.data.entity.Vaadiner;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
+
+import java.util.List;
 
 @Service
 public class VaadinerService {
@@ -25,6 +23,6 @@ public class VaadinerService {
 
     public List<Vaadiner> listAllLeaders() {
         return vaadinerRepository.findAll().stream().filter(vaadiner -> Role.HERD_LEADER.equals(vaadiner.getRole()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
